--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-fetch": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-eva-icons": "0.0.8",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
     "react-scripts": "5.0.0",
