--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
         }
     ],
     "start_url": ".",
-    "display": "fullscreen",
+    "display": "standalone",
     "theme_color": "#587455",
     "background_color": "#587455"
 }
