hide volume tracks

--- a/back/S/apps.json
+++ b/back/S/apps.json
@@ -278,12 +278,7 @@
     "name": "tuner",
     "title": "Тюнер",
     "description": "",
-    "outsideApp" : true,
-    "R": [
-      "@userLevel",
-      "==",
-      100
-    ]
+    "outsideApp": true
   },
   {
     "name": "exb",
