rename cm app param

--- a/back/S/+lock/apps.json
+++ b/back/S/+lock/apps.json
@@ -225,7 +225,7 @@
       "@bossLevel"
     ],
     "params": [
-      "regUsersCount:#Number"
+      "userVisitTokensCount:#Number"
     ],
     "requirements": [
       {
