--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "archiver": "^5.3.0",
     "md5": "^2.3.0",
     "node-fetch": "^3.2.3",
+    "qrcode": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-eva-icons": "0.0.8",
-    "react-redux": "^7.2.6",
+    "react-redux": "^7.2.8",
     "react-router": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
@@ -62,6 +63,7 @@
   },
   "main": "deploy.js",
   "devDependencies": {
+    "@types/qrcode": "^1.4.2",
     "react-router-dom": "^6.2.2"
   },
   "keywords": [],
