--- a/back/S/apps.json
+++ b/back/S/apps.json
@@ -214,6 +214,12 @@
         "file": "games.json",
         "name": "games",
         "ext": "json"
+      },
+      {
+        "path": "../apps/lider/contexts.json",
+        "file": "contexts.json",
+        "name": "contexts",
+        "ext": "json"
       }
     ]
   },
