--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
   },
   "main": "deploy.js",
   "devDependencies": {
+    "@types/archiver": "^5.3.1",
     "@types/jasmine": "^4.3.1",
     "@types/qrcode": "^1.4.2",
     "@types/react": "^16.14.29",
     "@types/react-dom": "^16.9.16",
+    "@types/ws": "^8.5.3",
     "jasmine": "^4.5.0",
     "nyc": "^15.1.0",
     "react-router-dom": "^6.2.2",
