--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.47",
     "archiver": "^5.3.0",
+    "html5-qrcode": "^2.3.4",
     "md5": "^2.3.0",
     "node-fetch": "^3.2.3",
     "qrcode": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-eva-icons": "0.0.8",
+    "react-mount-animation": "0.0.11",
     "react-redux": "^7.2.8",
     "react-router": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -62,9 +64,11 @@
   "devDependencies": {
     "@types/archiver": "^5.3.1",
     "@types/jasmine": "^4.3.1",
+    "@types/md5": "^2.3.2",
     "@types/qrcode": "^1.4.2",
     "@types/react": "^16.14.29",
     "@types/react-dom": "^16.9.16",
+    "@types/react-transition-group": "^4.4.5",
     "@types/ws": "^8.5.3",
     "jasmine": "^4.5.0",
     "nyc": "^15.1.0",
