config files is updated

--- a/src/back/apps/index/apps.json
+++ b/src/back/apps/index/apps.json
@@ -1,7 +1,7 @@
 [
   {
     "name": "cm",
-    "title": "Аккорд Мастер",
+    "title": "Песни возрождённых",
     "description": "Сборщик Христианских песен для удобного использования"
   },
   {
@@ -57,8 +57,7 @@
   {
     "name": "spy",
     "title": "Шпион 1.0",
-    "description": "Сыграй в шпиона",
-    "level": 3
+    "description": "Сыграй в шпиона"
   },
   {
     "name": "im",
