--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/markdown-to-jsx": "^7.0.1",
     "@types/node": "^12.20.47",
     "archiver": "^5.3.0",
     "html5-qrcode": "^2.3.4",
+    "markdown-to-jsx": "^7.2.1",
     "md5": "^2.3.0",
     "node-fetch": "^3.3.0",
     "qrcode": "^1.5.0",
