--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "styled-components": "^6.1.1",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -71,6 +72,7 @@
     "@types/react": "^16.14.29",
     "@types/react-dom": "^16.9.16",
     "@types/react-transition-group": "^4.4.5",
+    "@types/styled-components": "^5.1.30",
     "@types/ws": "^8.5.3",
     "jasmine": "^4.5.0",
     "nyc": "^15.1.0",
