--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "markdown-to-jsx": "^7.2.1",
     "md5": "^2.3.0",
     "node-fetch": "^3.3.0",
+    "node-telegram-bot-api": "^0.64.0",
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
     "qrcode": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +46,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tg-dev": "nodemon tg-bot.mjs"
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +72,7 @@
     "@types/archiver": "^5.3.1",
     "@types/jasmine": "^4.3.1",
     "@types/md5": "^2.3.2",
+    "@types/node-telegram-bot-api": "^0.63.2",
     "@types/qrcode": "^1.4.2",
     "@types/react": "^16.14.29",
     "@types/react-dom": "^16.9.16",
