--- a/src/back/+case/package.json
+++ b/src/back/+case/package.json
@@ -4,12 +4,14 @@
     "array.prototype.flat": "^1.3.1",
     "core-js": "^3.27.0",
     "md5": "^2.3.0",
-    "ws": "^8.11.0"
+    "ws": "^8.11.0",
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
     "@types/md5": "^2.3.2",
     "@types/node": "^18.11.17",
     "@types/ws": "^8.5.3",
+    "@types/node-telegram-bot-api": "^0.63.2",
     "tslib": "^2.4.1"
   }
 }
