--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/markdown-to-jsx": "^7.0.1",
     "@types/node": "^12.20.47",
     "archiver": "^5.3.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html5-qrcode": "^2.3.4",
     "markdown-to-jsx": "^7.2.1",
     "md5": "^2.3.0",
@@ -52,8 +53,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -80,6 +80,10 @@
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.30",
     "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "jasmine": "^4.5.0",
     "nyc": "^15.1.0",
     "postcss": "^8.4.32",
