feat(package): replaced dependencies

--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/markdown-to-jsx": "^7.0.1",
-    "@types/node": "^12.20.47",
     "archiver": "^5.3.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "html5-qrcode": "^2.3.4",
     "markdown-to-jsx": "^7.2.1",
     "md5": "^2.3.0",
@@ -25,7 +21,6 @@
     "react-eva-icons": "0.0.8",
     "react-mount-animation": "0.0.11",
     "react-redux": "^7.2.8",
-    "react-router": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "styled-components": "^6.1.1",
@@ -72,23 +67,24 @@
   "devDependencies": {
     "@types/archiver": "^5.3.1",
     "@types/jasmine": "^4.3.1",
+    "@types/jest": "^29.5.11",
+    "@types/markdown-to-jsx": "^7.0.1",
     "@types/md5": "^2.3.2",
+    "@types/node": "^20.10.5",
     "@types/node-telegram-bot-api": "^0.63.2",
     "@types/qrcode": "^1.4.2",
-    "@types/react": "^16.14.29",
-    "@types/react-dom": "^16.9.16",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-redux": "^7.1.33",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.30",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jasmine": "^4.5.0",
     "nyc": "^15.1.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
-    "react-router-dom": "^6.2.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   },
