--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/markdown-to-jsx": "^7.0.1",
     "@types/md5": "^2.3.2",
     "@types/node": "^20.10.5",
+    "@types/node-schedule": "^2.1.5",
     "@types/node-telegram-bot-api": "^0.63.2",
     "@types/qrcode": "^1.4.2",
     "@types/react": "^18.2.45",
