--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "qrcode": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-mount-animation": "0.0.11",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
@@ -38,7 +37,7 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start HTTPS=true",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -86,7 +85,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   },
   "keywords": [],
   "author": "",
