fix(tsconfig): exclude images folder path fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "paths": {}
   },
   "include": ["src", "src/back/complect/exert/exer"],
-  "exclude": ["src/front/complect/the-icon/icons"]
+  "exclude": ["./src/front/complect/the-icon/icons"]
 }
