--- a/src/back/+case/package.json
+++ b/src/back/+case/package.json
@@ -15,7 +15,9 @@
     "@types/node-schedule": "^2.1.5",
     "@types/node-telegram-bot-api": "^0.63.2",
     "@types/ws": "^8.5.3",
-    "tslib": "^2.4.1"
+    "nodemon": "^3.0.1",
+    "tslib": "^2.4.1",
+    "typescript": "^5.5.3"
   },
   "scripts": {
     "relog": "fuser -k 4446/tcp & ts-node /var/www/jesmyl.ru/complect/soki/SokiServer.ts",
