fix(g): match fixes

--- a/[project start]/{DOMAIN}.conf
+++ b/[project start]/{DOMAIN}.conf
@@ -1,8 +1,8 @@
  <VirtualHost *:8080>
-    ServerName {DOMAIN}
-    ServerAlias www.{DOMAIN}
-    DocumentRoot /var/www/{DOMAIN}
-    <Directory /var/www/{DOMAIN}>
+    ServerName jesmyl.ru
+    ServerAlias www.jesmyl.ru
+    DocumentRoot /var/www/jesmyl.ru
+    <Directory /var/www/jesmyl.ru>
         AllowOverride All
     </Directory>
 </VirtualHost>
