--- a/src/back/+case/package.json
+++ b/src/back/+case/package.json
@@ -1,28 +1,15 @@
 {
-  "dependencies": {
-    "array.prototype.at": "^1.1.1",
-    "array.prototype.flat": "^1.3.1",
-    "core-js": "^3.27.0",
-    "md5": "^2.3.0",
-    "node-schedule": "^2.1.1",
-    "node-telegram-bot-api": "^0.64.0",
-    "ts-node": "^10.9.1",
-    "ws": "^8.11.0"
-  },
-  "devDependencies": {
-    "@types/md5": "^2.3.2",
-    "@types/node": "^18.11.17",
-    "@types/node-schedule": "^2.1.5",
-    "@types/node-telegram-bot-api": "^0.63.2",
-    "@types/ws": "^8.5.3",
-    "nodemon": "^3.0.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.5.3"
-  },
+  "name": "back",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "relog-js": "fuser -k 4446/tcp & node /var/www/jesmyl.ru/index.js",
-    "relog": "fuser -k 4446/tcp & ts-node /var/www/jesmyl.ru/back.index.ts",
-    "re-start": "systemctl restart jesmyl_soki",
-    "re-status": "systemctl status jesmyl_soki"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.5.3"
   }
 }
