--- a/src/back/.htaccess
+++ b/src/back/.htaccess
@@ -1,3 +1,18 @@
+<ifModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule ^(.*?bomba\.php.*?)$ $1 [L]
+    RewriteBase /
+    RewriteRule ^index\.html$ - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule .* /index.html [L]
+</ifModule>
+
+
+
+
+
+
 # Заголовок Cache-Control
 #<IfModule mod_headers.c>
 #        Header append Cache-Control "public"
