--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "styled-components": "^6.1.1",
