--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "set PORT=3627&&set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
