--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "archiver": "^5.3.0",
     "html5-qrcode": "^2.3.4",
+    "json-as-xlsx": "^2.5.6",
     "markdown-to-jsx": "^7.2.1",
     "md5": "^2.3.0",
     "node-fetch": "^3.3.0",
