--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "archiver": "^5.3.0",
-    "html5-qrcode": "^2.3.4",
+    "html5-qrcode": "^2.3.8",
     "json-as-xlsx": "^2.5.6",
     "markdown-to-jsx": "^7.2.1",
     "md5": "^2.3.0",
@@ -15,6 +15,7 @@
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -84,7 +85,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.3"
   },
   "keywords": [],
   "author": "",
