fix(deploy): deploy without ts-node

--- a/[project start]/jesmyl_soki.service
+++ b/[project start]/jesmyl_soki.service
@@ -4,4 +4,4 @@ Description=The Soki Service
 [Service]
 Restart=on-failure
 RestartSec=5s
-ExecStart=ts-node /var/www/jesmyl.ru/back.index.ts
+ExecStart=node /var/www/jesmyl.ru/back.index.js
