--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "archiver": "^5.3.0",
+    "docker": "^1.0.0",
     "json-as-xlsx": "^2.5.6",
     "markdown-to-jsx": "^7.2.1",
     "md5": "^2.3.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.0",
+    "react-virtuoso": "^0.6.0",
     "sass": "^1.49.9",
     "styled-components": "^6.1.1",
     "web-vitals": "^0.2.4",
@@ -63,6 +65,7 @@
   },
   "main": "deploy.js",
   "devDependencies": {
+    "@prisma/client": "^5.22.0",
     "@types/archiver": "^5.3.1",
     "@types/jasmine": "^4.3.1",
     "@types/jest": "^29.5.11",
@@ -77,12 +80,14 @@
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.30",
     "@types/ws": "^8.5.3",
+    "esbuild": "^0.24.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jasmine": "^4.5.0",
     "nyc": "^15.1.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.6.3"
   },
